inventory/k8s.python279.org/addon-yml/prometheus/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: monitoring
    app.kubernetes.io/name: prometheus
  name: prometheus
  namespace: monitoring
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/port:   '9090'
spec:
  selector: 
    app.kubernetes.io/component: monitoring
    app.kubernetes.io/name: prometheus
  ports:
    - protocol: TCP
      port: 9090
      targetPort: prometheus-web
